--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		(async function() {
 			await cheerpjInit();
 			cheerpjCreateDisplay(1024, 768);
-			await cheerpjRunJar("/app/orihimeMod-0.3.2.1.jar");
+			await cheerpjRunJar("/app/orihimemod-cheerpj/orihimeMod-0.3.2.1.jar");
 		})();
 	</script>
 </body>
