--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 </head>
 
 <body>
+	<div>
+		Known issues:<br>
+		1. "Open" doesn't work.
+		2. You need to clean browser data as you reload this page.
+	</div>
+	<br>
 	<script>
 		(async function() {
 			await cheerpjInit();
