--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>CheerpJ test</title>
+	<title>OrihimeMod in Browser</title>
 	<script src="https://cjrtnc.leaningtech.com/3.0/cj3loader.js"></script>
 </head>
 
 <body>
 	<div>
 		Known issues:<br>
-		1. "Open" doesn't work.
-		2. You need to clean browser data as you reload this page.
+		1. "Open" doesn't work.<br>
+		2. You need to clear browser data as you reload this page.<br>
 	</div>
 	<br>
 	<script>
