--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>OrihimeMod in Browser</title>
 	<script src="https://cjrtnc.leaningtech.com/3.0/cj3loader.js"></script>
 	<style>
-		.titleBar a.controls {
+		.cheerpjNC > .window:nth-child(2) > .titleBar a.controls {
 			display: none;
 		}
 	</style>
@@ -14,7 +14,7 @@
 
 <body>
 	<div>
-		Known issue: "Open" doesn't work.<br>
+		Known issue: "Open" doesn't work, and touch device is not supported.<br>
 	</div>
 	<br>
 	<script>
